[gd_scene load_steps=7 format=3 uid="uid://dqbmrys7xprkk"]

[ext_resource type="Script" path="res://Scripts/Roomba.gd" id="1_0dsm5"]
[ext_resource type="Texture2D" uid="uid://cse56l8l44vu7" path="res://Assets/Roomba(fixed).png" id="2_oa4db"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0i0s"]
size = Vector2(88, 52.6667)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_nara5"]
a = Vector2(34, 0.333336)
b = Vector2(45.6667, 0.333336)

[sub_resource type="Animation" id="Animation_c4m38"]
resource_name = "run"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mhlmj"]
_data = {
"run": SubResource("Animation_c4m38")
}

[node name="Roomba" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_0dsm5")

[node name="hitox" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="hitox"]
position = Vector2(1.33333, 21.6667)
shape = SubResource("RectangleShape2D_i0i0s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-217.333, -106.333)
shape = SubResource("SegmentShape2D_nara5")
disabled = true

[node name="left" type="RayCast2D" parent="."]
position = Vector2(-40, -16)
rotation = -1.5708
scale = Vector2(1.73333, 5.77778)
target_position = Vector2(-38.4615, -4.76837e-07)

[node name="right" type="RayCast2D" parent="."]
position = Vector2(40, -16)
rotation = -1.5708
scale = Vector2(1.73333, 5.77778)
target_position = Vector2(-38.6667, 0.333333)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_oa4db")
vframes = 2
frame = 1

[node name="wallL" type="RayCast2D" parent="."]
target_position = Vector2(-42.6667, 0)

[node name="wallR" type="RayCast2D" parent="."]
target_position = Vector2(42.6667, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mhlmj")
}

[connection signal="area_entered" from="hitox" to="." method="_on_hitox_area_entered"]
[connection signal="body_entered" from="hitox" to="." method="_on_hitox_body_entered"]
